--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,9 @@ languageCode = 'en-us'
 title = 'IPM Grupo 23'
 theme = 'hugo-simplecss'
 
+[markup.goldmark.renderer]
+  unsafe = true # Allow HTML in md files
+
 [menu]
 [[menu.main]]
     name = 'Home'
